--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.6.21'
 }
 
-group 'com.ezkhimo.samplecodegen'
-version '1.2-SNAPSHOT'
+group 'com.nispr.intellij.zephyr'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -18,10 +18,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     implementation 'io.insert-koin:koin-core:3.2.0-beta-1'
-
 }
 
-// See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
     version = '2021.3.2'
 }
@@ -35,8 +33,7 @@ compileKotlin {
 
 patchPluginXml {
     changeNotes = """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+      <em>1.0</em> Add basic transpilation."""
 }
 
 runIde.dependsOn clean
